# SideFX

./: .gitignore  .luacheckrc  .pre-commit-config.yaml  AGENT_HANDOFF.md  CLAUDE.md  GAIN_STAGING_PLAN.md  HANDOVER.md  IMPLEMENTATION_PLAN.md  MCP_PLAN.md  MCP_SETUP_NOTES.md  MODULATOR_ARCHITECTURE.md  MODULATOR_SIDEBAR_REFACTOR_PLAN.md  NESTED_RACK_STATE_FIX.md  NESTED_RACK_UI_FIX.md  NEXT_SESSION.md  PLAN_CPP_REWRITE.md  README.md  ROADMAP.md  SideFX.lua  UI_IMPROVEMENTS_PLAN.md  V1_RELEASE_PLAN.md  debug_check_plinks.lua  debug_midi_loop_info.lua  debug_midi_source_props.lua  debug_plink_params.lua  index.xml  test_api_exists.lua  test_modulation.lua  test_modulation_advanced.lua  test_param.lua
.github/workflows/: ci.yml  release.yml  tests.yml
docs/: BAKE_MODULATION_STATUS.md  HANDOVER.md  PRESET_FORMAT_ANALYSIS.md  RELEASE_PLAN_V1.md  ROADMAP.md  index.html
extension/: .gitignore  CMakeLists.txt  Makefile  WDL  reaper-sdk
extension/include/: audio_hook.h  bezier.h  modulator.h  reaimgui_api.h
extension/include/ui/: sidefx_window.h
extension/src/: audio_hook.cpp  main.cpp  modulator.cpp
extension/src/ui/: reaimgui_api.cpp  sidefx_window.cpp
jsfx/: SideFX_Mixer.jsfx  SideFX_Modulator.jsfx  SideFX_Modulator.jsfx.rpl  SideFX_Oscilloscope.jsfx  SideFX_Spectrum.jsfx  SideFX_Utility.jsfx
jsfx/SideFX_Modulator/: Exponential Fall  Exponential Rise  Growl  Ramp Down  Ramp Up  Sawtooth  Shark Fin  Sine Wave  Square  Triangle
jsfx/Utils/: SideFX_Mixer.jsfx  SideFX_Modulator.jsfx  SideFX_Oscilloscope.jsfx  SideFX_Spectrum.jsfx  SideFX_Utility.jsfx
lib/: browser.lua  constants.lua  container.lua  device.lua  fx_naming.lua  fx_utils.lua  modulator.lua  modulator_constants.lua  naming.lua  presets.lua  rack.lua  rack_backend.lua  routing.lua  state.lua
lib/browser/: browser.lua
lib/core/: config.lua  constants.lua  state.lua
lib/device/: container.lua  device.lua
lib/fx/: fx_naming.lua  fx_utils.lua
lib/modulator/: modulator.lua  modulator_bake.lua  modulator_constants.lua  modulator_presets.lua  param_indices.lua
lib/rack/: rack.lua  rack_backend.lua
lib/ui/: browser_panel.lua  chain_column.lua  chain_item.lua  device_chain.lua  device_panel.lua  device_panel.lua.bak  drag_drop.lua  drawing.lua  fx_detail_panel.lua  fx_menu.lua  modulator_grid_panel.lua  modulator_panel.lua  modulator_sidebar.lua  rack_panel.lua  rack_panel_main.lua  rack_ui.lua  toolbar.lua  widgets.lua
lib/utils/: json.lua  naming.lua  param_utils.lua  presets.lua  track_detection.lua  unit_detector.lua
presets/chains/: test.sidefx.json
scripts/: bump-version.sh  check-debug-logs.sh  generate_modulator_presets.py  release-check.sh
tests/: README.md  assertions.lua  runner.lua  runner_luaunit.lua  test_modulation_math.lua
tests/integration/: README.md  bake_integration_tests.lua  run_all.lua  setup_test_project.lua  test_container_utils.lua  test_containers.lua  test_deeply_nested.lua  test_edge_cases.lua  test_helpers.lua  test_modulators.lua  test_racks.lua  test_state_management.lua
(+53 files in other folders)
